# zenwebp

./: .gitignore  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  Cargo.toml.original.txt  Cross.toml  DESIGN.md  Differences.md  FEEDBACK.md  FILE_SIZE_INVESTIGATION.md  LICENSE-APACHE  LICENSE-MIT  LOG.md  LOSSY_ENCODER_ROADMAP.md  OPTIMIZATION-STATUS.md  PLAN-token-buffer.md  README.crates.md  README.md  TODO-incant-migration.md  api-feedback.md  justfile
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benches/: compare_zenbench.rs  decode_benchmark.rs  decode_compare.rs  decode_lossless_compare.rs  decode_zenbench.rs  encode_benchmark.rs  encode_vs_libwebp.rs  predictor_coalesce.rs  profile_decode.rs  profile_encode.rs  profile_libwebp.rs  profile_wasm.rs
benchmarks/: PARITY_FINISH_PLAN.md  README.md  bitexact_parity_2026-07-14.md  byteparity_scope_2026-07-14.md  chroma_precision_sweep_2026-07-14.tsv  codec_metric_to_q_2026-06-23.md  crabmagick_lossless_claims_2026-07-13.md  crabmagick_lossless_claims_2026-07-13.tsv  fit_metric_to_q_2026-06-23.py  imazen26_m0_2026-07-14.tsv  lineart_fastalpha_2026-07-16.tsv  lineart_rdtier_2026-07-16.tsv  lossless_fast_tier_2026-07-14.md  lossless_fast_tier_2026-07-14.tsv  m2_parity_2026-07-16.tsv  maxi4_header_bits_2026-07-14.md  maxi4_header_bits_2026-07-14.tsv  msweep_2026-07-14.md  msweep_2026-07-14.tsv  msweep_post70_2026-07-14.tsv  picker_ab_bucket_2026-04-29.tsv  picker_ab_picker_2026-04-29.tsv  picker_v0.1_holdout_ab_2026-04-30.md  picker_v0.3_holdout_ab_2026-05-04.md  picker_v0.3_holdout_ab_2026-05-04.tsv  picker_v3_holdout_ab_2026-05-03.md  rd_anchor_2026-07-16.tsv  rd_pareto_review_2026-07-16.md  rd_round3_2026-07-16.md  rd_round3_chroma_2026-07-16.tsv  scans_sns_2026-07-16.tsv  segs1_dquv_ab_2026-07-16.tsv  sharpyuv_compare_2026-07-16.tsv  sharpyuv_dig_2026-07-16.md  sharpyuv_port_2026-07-16.md  sharpyuv_port_ab_2026-07-16.tsv  speed_parity_2026-07-16.md  sweep_validate_webp_2026-06-11.tsv  sweep_validate_webp_2026-06-12.tsv  tuned_candidates_2026-07-14.md  (+15 more)
dev/: alphadiff.rs  arm_profile.rs  batch_decode_compare.rs  batch_decode_test.rs  bitexact_diff.rs  build_size_dense_corpus.rs  byteparity_sweep.rs  cache_compare.rs  cache_test.rs  callgrind_encode.rs  chroma_entropy_spike.rs  chroma_spatial_spike.rs  coeff_update_probs.rs  compare_all_methods.rs  compare_coefficients.rs  compare_i16_modes.rs  compare_i4_modes.rs  compare_trellis_block.rs  comprehensive_benchmark.rs  corpus_production.rs  corpus_test.rs  cost_model_sweep.rs  debug_block.rs  debug_i16_i4_cost.rs  debug_zensim.rs  decode_noisy.rs  empirical_sweep.rs  find_fails.rs  force_i16_comparison.rs  inject_v3_specs.py  issue44_dump_scores.rs  issue50_diff_disk.rs  issue50_repro.rs  issue50_xdecode.rs  issue_32_baseline.rs  mbpixdiff.rs  output_hash.rs  parity_baseline.rs  picker_ab_eval.rs  picker_v0_3_holdout_ab.rs  (+30 more)
differences/: 01-mode-selection.md  02-rd-cost-trellis.md  03-analysis-sns-segments.md  04-token-coding-bitstream.md  05-empirical-analysis.md  05-empirical-cid22.tsv  05-empirical-clic.tsv  05-empirical-imagemagick.tsv  05-empirical-raw.tsv  06-issue-32-fast-mb-analyze.md
docs/: ARCHITECTURE-CLEANUP.md  CALL-TREE.md  LOSSLESS-DECODER-PLAN.md  LOSSY-ENCODER-PLAN.md  PERFORMANCE.md  RECOVERY_REGISTER_2026-05-08.md  SHARP-YUV.md  VARIANT_GENERATION.md
examples/: analyze_mb.rs  analyze_profiles.rs  api_guide.rs  cache_compare.rs  cache_sweep.rs  cache_test.rs  callgrind_encode.rs  callgrind_encode_m4.rs  callgrind_libwebp.rs  callgrind_lossless.rs  callgrind_lossless_decode.rs  compare_all_methods.rs  compare_coefficients.rs  compare_i16_modes.rs  compare_i4_modes.rs  compare_i4_sse.rs  compare_quantizers.rs  compare_rd_costs.rs  compare_rd_scores.rs  compare_trellis_block.rs  comprehensive_benchmark.rs  corpus_m3_test.rs  corpus_production.rs  corpus_test.rs  debug_block.rs  debug_i16_i4_cost.rs  debug_mode_decision.rs  decode_benchmark.rs  decode_lossless_benchmark.rs  decode_noisy.rs  decode_only.rs  decoder_upstream_compare.rs  dump_rose_rgba.rs  force_i16_comparison.rs  heap_strip_pipeline.rs  heaptrack_test.rs  hrtb_test.rs  lossless_anim_path_test.rs  lossless_benchmark.rs  lossless_corpus.rs  (+34 more)
fuzz/: Cargo.toml  webp.dict
fuzz/fuzz_targets/: decode_animated.rs  decode_still.rs  decode_v2.rs
fuzz/regression/: crash-38605878678def8b8a8489cefeff55a869d74b38-issue68-bomb-52mp  crash-3e4a2ae95a4f64dfbbb298b84e905ed3a430b63e  crash-448fb688804e4ca736022df3d1c69e73c615180b  crash-4519724a40a75878e5d0faf2484314d32238af2a  crash-f985ea1af7fa212282e4ac684ac06b565ee6782e
scripts/: heaptrack_batch.sh  profile_memory.sh  zenwebp_picker_distill.py
src/: codec.rs  decoder.rs  detect.rs  encoder.rs  heuristics.rs  (+30 more)
zenwebp-recompress/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
zenwebp-recompress/benchmarks/: calibration_2026-05-28.md  coeff_edit_experiment_2026-05-28.md  deblock_experiment_2026-05-28.md  paired_sweep_v2_deblock_2026-05-28.csv  paired_sweep_v2_deblock_2026-05-28.meta.md  smoke_calibrate_2026-05-28.csv  smoke_calibrate_2026-05-28.meta.md  sweeps-2026-05-28.pointer.md  test_corpus_2026-05-28.csv
zenwebp-recompress/docs/: CALIBRATION_NOTES.md  QUALITY_DETECTION.md
zenwebp-recompress/examples/: recompress_demo.rs
zenwebp-recompress/scripts/: build_paired_corpus.sh
zenwebp-recompress/src/: api.rs  aq.rs  budget.rs  classify.rs  error.rs  estimate.rs  lib.rs  measure.rs  router.rs  source.rs  target.rs
zenwebp-recompress/src/calibration/: calib_tables.rs  data.rs  mod.rs
zenwebp-recompress/src/strategies/: coeff_edit.rs  deblock.rs  deblock_reencode.rs  lossless_reencode.rs  lossless_remux.rs  mod.rs  reencode.rs
zenwebp-recompress/src/vp8x/: bool.rs  compensate.rs  edit.rs  emit.rs  mod.rs  parse.rs  tables.rs
zenwebp-recompress/tests/: locked_api.rs  quality_grid_robustness.rs  recompress_smoke.rs
zenwebp-recompress/zwr-calibrate/: Cargo.toml  build_calib_corpus.sh  fit_calibration.py
zenwebp-recompress/zwr-calibrate/src/: main.rs
zwr-calibrate/: Cargo.toml
zwr-calibrate/src/: main.rs
(+191 files in other folders)
