[package]
name = "zenwebp"
version = "0.4.5"
edition = "2024"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
rust-version = "1.93"

description = "High-performance WebP encoding and decoding in pure Rust"
homepage = "https://github.com/imazen/zenwebp"
repository = "https://github.com/imazen/zenwebp"
documentation = "https://docs.rs/zenwebp"
categories = ["multimedia::images", "multimedia::encoding", "encoding"]
keywords = ["webp", "image", "encoder", "decoder", "codec"]
readme = "README.md"
autobenches = false

include = ["/src", "LICENSE-AGPL", "README.md", "CHANGES.md"]

[dependencies]
# Core dependencies - all no_std compatible
byteorder-lite = { version = "0.1.0", default-features = false }
enough = { version = "0.4.3", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher"] }
thiserror = { version = "2.0.18", default-features = false }
whereat = { version = "0.1.5", default-features = false }
libm = "0.2.16"
zencodec = { version = "0.1.13", optional = true }
# zennode = { path = "../zennode/zennode", optional = true, default-features = false, features = ["derive"] }
zenpixels = { version = "0.2.10", default-features = false }
self_cell = { version = "1.2", optional = true }
bytemuck = { version = "1", default-features = false, features = ["extern_crate_alloc"] }
garb = { version = "0.2.5", default-features = false, features = ["experimental"] }
linear-srgb = { version = "0.6.7"}
zenyuv = { version = "0.1.3", default-features = false }
png = { version = "0.18", optional = true }
webp = { version = "0.3.0", optional = true }
archmage = { version = "0.9.15", features = ["macros"] }
magetypes = { version = "0.9.15" }
rgb = { version = "0.8", optional = true, default-features = false, features = ["as-bytes"] }
imgref = { version = "1.12", optional = true, default-features = false }
zensim = { version = "0.2", optional = true }
# zenanalyze: path-pinned to local main (post-0.1.0) so we pick up
# IsGrayscale, PatchFractionFast, QuantSurvivalY/Uv that were added
# after the 0.1.0 release. The `experimental` feature gates the
# research-stage signals (PaletteFitsIn256, IndexedPaletteWidth,
# LineArtScore, SkinToneFraction, EdgeSlopeStdev). Path-pin until the
# next zenanalyze release lands these on crates.io.
zenanalyze = { version = "0.1.0", path = "../zenanalyze", optional = true, features = ["experimental"] }
# zenpredict — Rust ZNPR v2 inference runtime. Path-pinned to the
# zenanalyze workspace until 0.2.0 lands on crates.io. Gated behind
# the `picker` cargo feature so default builds don't pull it.
# Companion Python tooling lives at zenanalyze/zentrain/. See
# zenanalyze/MIGRATION.md for the rename + format-change context.
zenpredict = { version = "0.1.0", path = "../zenanalyze/zenpredict", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
archmage = { version = "0.9.15", features = ["std", "macros"] }
paste = "1.0.14"
png = "0.18"
rand = "0.10.1"
rayon = "1.10"
rgb = "0.8"
zenpng = "0.1.4"
zenpixels-convert = { version = "0.2.11", features = ["rgb"] }
jpeg-decoder = "0.3"

# Native-only dev-deps (C bindings, threading, or native-only features)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
butteraugli = "0.9.0"
codec-corpus = "1"
dssim-core = "3.4"
fast-ssim2 = "0.7.1"
imgref = "1.12"
libwebp-sys = "0.14"
webp = "0.3.1"
webpx = "0.1.4"
yuv = "0.8"
# Pareto sweep harness uses zenresize for size variants (Lanczos),
# matching the project-wide resampling used elsewhere in zen* benches.
zenresize = "0.3"
# serde_json = "1"
zenbench = { version = "0.1.2", features = ["criterion-compat"] }
zensim = "0.2"
zensim-regress = "0.3.0"

[features]
default = ["std", "fast-yuv", "pixel-types"]
# Enable std library. Required only for Encoder.encode_to_writer().
# Without std, use slice-based decoder and Vec-based encoder APIs.
std = ["thiserror/std", "whereat/std", "byteorder-lite/std"]
# Type-safe pixel format support via the `rgb` crate.
pixel-types = ["dep:rgb"]
# imgref integration for Img<Vec<P>> / Img<&[P]> decode/encode.
imgref = ["dep:imgref", "pixel-types"]
# Enable AVX-512 autoversion variants (passthrough to archmage).
avx512 = ["archmage/avx512"]
# Test-only: cause the SIMD tier parity tests to PANIC if any token is
# compile-time guaranteed (and therefore cannot be disabled at runtime).
# Used in CI to ensure full tier coverage. Do NOT combine with
# `-Ctarget-cpu=native` — that bakes features in at compile time and
# defeats runtime disabling, which is exactly what this feature catches.
testable_dispatch = []
# --- Internal features (not for public use, underscore prefix = private) ---
# Nightly-only: enables #[bench] micro-benchmarks. Requires `cargo +nightly test`.
_benchmarks = []
# Run corpus-based integration tests (requires codec-corpus data).
_corpus_tests = []
# Debug mode selection for encoder (set MB_DEBUG=x,y env var to debug specific macroblock).
mode_debug = ["std"]
# Enable PNG/WebP deps for profiling binaries.
_profiling = ["dep:png", "dep:webp"]
# WASM profiling - minimal deps for wasm32 benchmarking.
_wasm_profiling = ["std"]
# Deprecated no-op: YUV conversion now always uses zenyuv.
# Kept for backwards compatibility so existing Cargo.toml entries
# with `features = ["fast-yuv"]` don't break.
fast-yuv = []
# Enable zencodec trait integration
zencodec = ["dep:zencodec", "dep:self_cell"]
# Enable target_zensim closed-loop adaptive encoder.
# Pulls in zensim for perceptual measurement; iteration loop encodes →
# decodes → measures → adjusts global VP8 quality until it lands in
# the target band. See `LossyConfig::with_target_zensim`.
target-zensim = ["dep:zensim", "std"]
# Use zenanalyze for content classification (auto-preset detection,
# target_zensim bucket detection, target_zensim starting-q calibration).
# When off, falls back to zenwebp's homegrown alpha-histogram classifier.
# Opt-in for now; may become default once the threshold contract stabilises.
analyzer = ["dep:zenanalyze"]
# dev-only — enables runtime ablation toggles read from environment
# variables for `dev/zensim_*.rs` measurement binaries. Production
# builds should leave this off so the iteration hot path makes no
# `std::env::var` calls. See `src/encoder/zensim_target.rs` for the
# list of toggles.
ablation = ["target-zensim"]
# Expose advanced encoder tuning knobs (partition_limit, multi_pass_stats,
# smooth_segment_map, sharp_yuv, cost_model). Gated because the default
# public API surface keeps the codec's user contract minimal — Quality
# + Method + a few SNS/filter knobs — and these axes are mostly for
# corpus calibration sweeps and the picker training pipeline. Build
# with `--features expert` for picker training, codec calibration, or
# any harness varying these axes. Production codec consumers don't
# need this.
__expert = []
# zenpredict-driven encoder-knob picker. Replaces the bucket-table
# `content_type_to_tuning` lookup at the `Preset::Auto` site with a
# baked MLP (ZNPR v2) that argmins over the 6-cell (method × segments)
# hybrid-heads grid trained on the 2026-04-30 sweep. Implies `expert`
# because the picker's per-cell scalar heads include the expert axes
# (partition_limit etc.) when v0.2+ schemas land.
# Off by default — production builds use the bucket-table path until
# A/B vs bucket on held-out corpus shows the picker wins. See
# src/encoder/picker/.
picker = ["dep:zenpredict", "analyzer", "__expert"]
# Enable zennode pipeline node definitions
# zennode = ["dep:zennode"]

[[example]]
name = "debug_zensim"
path = "dev/debug_zensim.rs"

[[example]]
name = "zensim_calibrate"
path = "dev/zensim_calibrate.rs"
required-features = ["target-zensim"]

[[example]]
name = "zensim_convergence_eval"
path = "dev/zensim_convergence_eval.rs"
required-features = ["target-zensim"]

[[example]]
name = "zensim_extended_eval"
path = "dev/zensim_extended_eval.rs"
required-features = ["target-zensim"]

[[example]]
name = "zensim_ab_quadrant_vs_segmap"
path = "dev/zensim_ab_quadrant_vs_segmap.rs"
required-features = ["target-zensim", "ablation"]

[[example]]
name = "zensim_ablation"
path = "dev/zensim_ablation.rs"
required-features = ["target-zensim", "ablation"]

[[example]]
name = "zensim_phase3_trace"
path = "dev/zensim_phase3_trace.rs"
required-features = ["target-zensim", "ablation"]

[[example]]
name = "empirical_sweep"
path = "dev/empirical_sweep.rs"

[[example]]
name = "issue_32_baseline"
path = "dev/issue_32_baseline.rs"

[[example]]
name = "parity_baseline"
path = "dev/parity_baseline.rs"

[[example]]
name = "cost_model_sweep"
path = "dev/cost_model_sweep.rs"
required-features = ["__expert"]

[[example]]
name = "issue44_dump_scores"
path = "dev/issue44_dump_scores.rs"

[[example]]
name = "zenanalyze_classify_diff"
path = "dev/zenanalyze_classify_diff.rs"
required-features = ["analyzer"]

[[example]]
name = "zenwebp_picker_sweep"
path = "dev/zenwebp_picker_sweep.rs"
required-features = ["picker", "target-zensim", "analyzer"]

# Proper Pareto sweep harness following zenpicker/FOR_NEW_CODECS.md
# Step 1+2. Per (image, config, q) → (bytes, zensim, encode_ms).
# Per (image) → full zenanalyze feature vector. --features-only mode
# extends the features TSV without re-running the encode pass.
[[example]]
name = "zenwebp_pareto"
path = "dev/zenwebp_pareto.rs"
required-features = ["analyzer"]

# Replays features against an existing pareto features TSV — used to
# regenerate the feature columns when the analyzer schema has moved
# but the encode TSV is reused as-is. See dev/zenwebp_features_replay.rs.
[[example]]
name = "zenwebp_features_replay"
path = "dev/zenwebp_features_replay.rs"
required-features = ["analyzer"]

# One-shot empirical probe: do tiny zenwebp-encoded images have an
# intrinsic ceiling on achievable zensim score? See dev/zensim_ceiling_probe.rs.
[[example]]
name = "zensim_ceiling_probe"
path = "dev/zensim_ceiling_probe.rs"
required-features = ["analyzer"]

# Build size-dense corpus: 20 representative source images resampled
# (Mitchell-Netravali) to log-spaced sizes 32..4096 for picker
# size-axis training coverage. Output PNGs feed zenwebp_pareto via
# --corpus.
[[example]]
name = "build_size_dense_corpus"
path = "dev/build_size_dense_corpus.rs"

# A/B evaluator: build twice, once with `--features "target-zensim
# analyzer"` (bucket-table baseline), once with `--features
# "target-zensim picker"` (picker), pair the two `--out-tsv` files
# to read off the lift on the 76-image corpus.
[[example]]
name = "picker_ab_eval"
path = "dev/picker_ab_eval.rs"
required-features = ["target-zensim", "analyzer"]

[[example]]
name = "zenanalyze_validate_vs_gpt"
path = "dev/zenanalyze_validate_vs_gpt.rs"
required-features = ["analyzer"]

[[example]]
name = "hrtb_test"
required-features = ["zencodec"]

[[example]]
name = "lossless_anim_path_test"
required-features = ["zencodec", "std"]

[[example]]
name = "heap_strip_pipeline"
required-features = ["zencodec", "std"]

[[bin]]
name = "zenwebp-encode"
path = "src/bin/zenwebp_encode.rs"
required-features = ["_profiling"]

[[bin]]
name = "profile_encode"
path = "benches/profile_encode.rs"
required-features = ["_profiling"]

[[bin]]
name = "profile_libwebp"
path = "benches/profile_libwebp.rs"
required-features = ["_profiling"]

[[bin]]
name = "profile_decode"
path = "benches/profile_decode.rs"
required-features = ["_profiling"]

[[bin]]
name = "profile_wasm"
path = "benches/profile_wasm.rs"
required-features = ["_wasm_profiling"]

[lints.rust]
# archmage::autoversion(cfg(simd)) uses "simd" as an archmage config name, not a Cargo feature
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(simd)'] }

[profile.release]
lto = true
codegen-units = 1

# Criterion benchmarks
[[bench]]
name = "encode_benchmark"
harness = false

[[bench]]
name = "encode_vs_libwebp"
harness = false

[[bench]]
name = "decode_benchmark"
harness = false

[[bench]]
name = "decode_zenbench"
harness = false

[[bench]]
name = "decode_compare"
harness = false

[dev-dependencies.image-webp]
version = "0.2"


[[bench]]
name = "decode_lossless_compare"
harness = false

[[bench]]
name = "predictor_coalesce"
harness = false
required-features = ["_benchmarks"]

# Codec code is unusably slow in debug mode (10-50x). Always optimize,
# even for `cargo test`. This matches libwebp which is always -O2.
[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2
