[package]
name = "webp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.zenwebp]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode_still"
path = "fuzz_targets/decode_still.rs"
test = false
doc = false

[[bin]]
name = "decode_animated"
path = "fuzz_targets/decode_animated.rs"
test = false
doc = false

[[bin]]
name = "decode_v2"
path = "fuzz_targets/decode_v2.rs"
test = false
doc = false
