[package]
name = "webp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.zenwebp]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

# TEMP mirror of the workspace-root [patch.crates-io]: the fuzz crate is its own
# workspace, so it does NOT inherit the parent patch. Drop both together when
# zencodec 0.1.26 (PR #103 taxonomy) is published — see the root Cargo.toml's
# matching comment. Keep the rev in sync with the root (c3220d51, PR #112).
[patch.crates-io]
zencodec = { git = "https://github.com/imazen/zencodec", rev = "c3220d51d2ef8ec16e8328ada2d5a04c7e6750ee" }

[profile.release]
debug = 1

[[bin]]
name = "decode_still"
path = "fuzz_targets/decode_still.rs"
test = false
doc = false

[[bin]]
name = "decode_animated"
path = "fuzz_targets/decode_animated.rs"
test = false
doc = false

[[bin]]
name = "decode_v2"
path = "fuzz_targets/decode_v2.rs"
test = false
doc = false
