[package]
name = "webp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.zenwebp]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

# TEMP mirror of the workspace-root [patch.crates-io]: the fuzz crate is its own
# workspace, so it does NOT inherit the parent patch. Drop both together when
# zencodec 0.1.26 (PR #103/#116 taxonomy) is published — see the root Cargo.toml's
# matching comment. Keep the rev in sync with the root (2427387f, PR #116).
[patch.crates-io]
zencodec = { git = "https://github.com/imazen/zencodec", rev = "2427387f86c77fdf773ae2fa219926a49cd32d99" }

[profile.release]
debug = 1

[[bin]]
name = "decode_still"
path = "fuzz_targets/decode_still.rs"
test = false
doc = false

[[bin]]
name = "decode_animated"
path = "fuzz_targets/decode_animated.rs"
test = false
doc = false

[[bin]]
name = "decode_v2"
path = "fuzz_targets/decode_v2.rs"
test = false
doc = false
