[package]
name = "zwr-calibrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Calibration corpus sweeper for zenwebp-recompress."
publish = false

[[bin]]
name = "zwr-calibrate"
path = "src/main.rs"

[dependencies]
zenwebp-recompress = { path = "../zenwebp-recompress", features = ["expert", "parallel"] }
zenwebp.workspace = true
zensim.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
csv.workspace = true
rayon.workspace = true
anyhow = "1"
